--- a/templates/entry/show.html.twig
+++ b/templates/entry/show.html.twig
@@ -1,12 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ article.title }}{% endblock %}
+{% block title %}{{ entry.notes }}{% endblock %}
 
 {% block body %}
     <div class="row mt-4">
         <div class="col-md-4 mb-4">
-            <h1>{{ article.title }}</h1>
+            <h1>{{ entry.notes }}</h1>
         </div>
-        <p>{{ article.content }}</p>
     </div>
 {% endblock %}
