--- a/templates/layout/_navbar.html.twig
+++ b/templates/layout/_navbar.html.twig
@@ -1,18 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Allowance</a>
+        <a class="navbar-brand" href="{{ path("entry_index") }}">Allowance</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto">
+                {#
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path("entry_index") }}">Entries</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path("task_index") }}">Tasks</a>
                 </li>
+                #}
             </ul>
             <ul class="navbar-nav ms-auto">
                 {% if app.user %}
