--- a/templates/entry/index.html.twig
+++ b/templates/entry/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="mt-4">
         Entries
-        <a class="btn btn-outline-primary" href="{{ path('entry_new') }}">Create new</a>
+        <a class="btn btn-outline-primary" href="{{ path('entry_new') }}">New Entry</a>
     </h1>
 
     <div class="row">
@@ -37,7 +37,10 @@
                     {{ form_row(searchForm.dateTo) }}
                 </div>
             </div>
-            <button class="mt-4 btn btn-primary">{{ button_label|default('Search') }}</button>
+                <div class="btn-group mt-4">
+                    <button class="btn btn-outline-primary">{{ button_label|default('Search') }}</button>
+                    <a class="btn btn-outline-dark" href="{{ path("entry_index") }}">Clear</a>
+                </div>
             </fieldset>
             {{ form_end(searchForm) }}
         </div>
@@ -54,6 +57,29 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title">Allowance Task</h3>
+                    {% if task is empty %}
+                        <a href="{{ path("task_new") }}">Set an allowance task</a>
+                    {% else %}
+                        <ul class="list-unstyled">
+                            <li>
+                                <b>{{ task.goal }}</b>
+                            </li>
+                            <li>{{ task.reward }}</li>
+                            <li>
+                                <div class="btn-group">
+                                    <a class="btn btn-outline-primary" href="{{ path("task_edit", {id: task.id}) }}">Update</a>
+                                    {{ include("task/_delete_link.html.twig", {task: task}) }}
+                                </div>
+                            </li>
+                        </ul>
+                        <p></p>
+                    {% endif %}
+
+                </div>
+            </div>
 
         </div>
     </div>
@@ -61,17 +87,17 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>User</th>
-                <th>Date</th>
-                <th>Price</th>
-                <th>Payee</th>
-                <th>Category</th>
-                <th>Notes</th>
+                <th>{{ knp_pagination_sortable(pagination, "User", "user.username")}}</th>
+                <th>{{ knp_pagination_sortable(pagination, "Date", "entry.entryDate") }}</th>
+                <th>{{ knp_pagination_sortable(pagination, "Price", "entry.price") }}</th>
+                <th>{{ knp_pagination_sortable(pagination, "Payee", "entry.payee")  }}</th>
+                <th>{{ knp_pagination_sortable(pagination, "Category", "entry.category") }}</th>
+                <th>{{ knp_pagination_sortable(pagination, "Notes", "entry.notes") }}</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-        {% for entry in entries %}
+        {% for entry in pagination %}
             <tr>
                 <td>{{ entry.user | title }}</td>
                 <td>{{ entry.entryDate | date("Y-m-d") }}</td>
@@ -90,5 +116,8 @@
         {% endfor %}
         </tbody>
     </table>
+    <div class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </div>
 
 {% endblock %}
