--- a/templates/task/new.html.twig
+++ b/templates/task/new.html.twig
@@ -5,5 +5,8 @@
 {% block body %}
     <h1>Create new Task</h1>
 
-    {{ include('entry/_form.html.twig') }}
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="mt-4 btn btn-primary">Save</button>
+    {{ form_end(form) }}
 {% endblock %}
