Allow decimals in price.

--- a/templates/entry/show.html.twig
+++ b/templates/entry/show.html.twig
@@ -16,7 +16,7 @@
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td>{{ entry.price | number_format(2) }}</td>
+                    <td>${{ entry.price | number_format(2) }}</td>
                 </tr>
                 <tr>
                     <th>Payee</th>
