--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}">
+        {% endblock %}
+
+        {% block javascripts %}
+            <script src="{{ asset('jquery-3.7.1.min.js') }}" defer></script>
+            <script src="{{ asset('bootstrap.bundle.min.js') }}" defer></script>
+            <script src="{{ asset('main.js') }}" defer></script>
         {% endblock %}
     </head>
     <body>
@@ -13,8 +20,5 @@
             {{ include("layout/_flash_messages.html.twig") }}
             {% block body %}{% endblock %}
         </div>
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
     </body>
 </html>
